--- a/InST/InST.ipynb
+++ b/InST/InST.ipynb
@@ -1,18 +1,51 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3e785306",
+   "metadata": {},
+   "source": [
+    "# Style Transfer Demo\n",
+    "## Using \"Inversion-Based Style Transfer with Diffusion Models\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7abb4368",
+   "id": "9da09d22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"make variations of input image\"\"\"\n",
+    "# Use your token to log into hugging face\n",
+    "from huggingface_hub import notebook_login\n",
+    "\n",
+    "notebook_login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e41777d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "Jupyter.notebook.session.restart({kernel_name: 'LDM'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0e8498c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports\n",
     "\n",
     "import argparse, os, sys, glob\n",
     "import PIL\n",
     "import torch\n",
-    "import torch.nn as nn\n",
+    "# import torch.nn as nn # not used\n",
     "import numpy as np\n",
     "from omegaconf import OmegaConf\n",
     "from PIL import Image\n",
@@ -28,10 +61,18 @@
     "sys.path.append(os.path.dirname(sys.path[0]))\n",
     "from ldm.util import instantiate_from_config\n",
     "from ldm.models.diffusion.ddim import DDIMSampler\n",
-    "from ldm.models.diffusion.plms import PLMSSampler\n",
+    "# from ldm.models.diffusion.plms import PLMSSampler # not used\n",
     "\n",
-    "from transformers import CLIPProcessor, CLIPModel\n",
-    "\n",
+    "# from transformers import CLIPProcessor, CLIPModel  # not used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7abb4368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "\n",
     "def chunk(it, size):\n",
@@ -202,6 +243,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5db20d8",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "08dd2dc3",
@@ -209,8 +256,11 @@
    "outputs": [],
    "source": [
     "# model.cpu()\n",
-    "model.embedding_manager.load('./logs/{log_dir}/checkpoints/embeddings.pt')\n",
-    "model = model.to(device)"
+    "\n",
+    "embedding = \"data/embeddings/longhair_embeddings.pt\"\n",
+    "# model.embedding_manager.load('./logs/{log_dir}/checkpoints/embeddings.pt')\n",
+    "model.embedding_manager.load(embedding)\n",
+    "model = model.to(device)\n"
    ]
   },
   {
@@ -222,12 +272,18 @@
    },
    "outputs": [],
    "source": [
-    "main(prompt = '*', \\\n",
-    "     content_dir = '{image_name}', \\\n",
-    "     style_dir = '{image_name}', \\\n",
-    "     ddim_steps = 50, \\\n",
-    "     strength = 0.7, \\\n",
-    "     seed=42, \\\n",
+    "\n",
+    "# data_dir = \"data\"\n",
+    "content = \"data/content/pexels-photo-4946604.jpg\"\n",
+    "style = \"data/style/longhair.jpg\"\n",
+    "\n",
+    "\n",
+    "main(prompt = '*',\n",
+    "     content_dir = content, \n",
+    "     style_dir = style, \n",
+    "     ddim_steps = 50, \n",
+    "     strength = 0.4, \n",
+    "     seed=50,\n",
     "     model = model)"
    ]
   },
@@ -256,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
