revert to pytorch 1.x dependencies

--- a/InST/inst2.ipynb
+++ b/InST/inst2.ipynb
@@ -279,7 +279,7 @@
     "style = \"data/style/longhair.jpg\"\n",
     "\n",
     "\n",
-    "main(prompt = '*',\n",
+    "output = main(prompt = '*',\n",
     "     content_dir = content, \n",
     "     style_dir = style, \n",
     "     ddim_steps = 50, \n",
@@ -294,7 +294,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output"
+   ]
   },
   {
    "cell_type": "code",
