added print statements to track flow

--- a/InST/inst2.ipynb
+++ b/InST/inst2.ipynb
@@ -290,6 +290,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"type(model): {type(model)}\")\n",
+    "print(f\"type(model.embedding_manager): {type(model.embedding_manager)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -308,6 +318,15 @@
     "# model.embedding_manager.load('./logs/{log_dir}/checkpoints/embeddings.pt')\n",
     "model.embedding_manager.load(embedding)\n",
     "model = model.to(device)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"type(model): {type(model)}\")"
    ]
   },
   {
